<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/edit_catalogs"
            android:icon="@drawable/ic_check_24dp"
            android:title="@string/edit_catalogs" />
        <item
            android:id="@+id/select_otf"
            android:icon="@drawable/ic_check_24dp"
            android:title="@string/select_otf" />
        <item
            android:id="@+id/get_report"
            android:icon="@drawable/ic_check_24dp"
            android:title="@string/get_report" />
        <item
            android:id="@+id/create_excel_report_file"
            android:icon="@drawable/ic_check_24dp"
            android:title="сформировать execel файл отчета" />
        <item
            android:id="@+id/send_email"
            android:icon="@drawable/ic_check_24dp"
            android:title="@string/send_email" />
    </group>

</menu>
