<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/report_label_quantity_people"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standartMargin"
        android:layout_marginEnd="@dimen/standartMargin"
        android:text="@string/report_label_quantity_people"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/report_label_work_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standartMargin"
        android:layout_marginEnd="@dimen/standartMargin"
        android:text="@string/report_label_work_time"
        app:layout_constraintEnd_toStartOf="@+id/report_label_quantity_people"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/report_label_tf_04"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="@dimen/standartMargin"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:textSize="@dimen/small_text"
        app:layout_constraintEnd_toStartOf="@+id/report_label_work_time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/report_label_work_time"
        tools:ignore="Autofill,LabelFor"
        tools:text="@string/tf_04" />

    <TextView
        android:id="@+id/report_quantity_people_tf_04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standartMargin"
        android:layout_marginBottom="@dimen/standartMargin"
        android:text="@string/report_example_count"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/report_label_quantity_people"
        app:layout_constraintStart_toStartOf="@+id/report_label_quantity_people"
        app:layout_constraintTop_toBottomOf="@+id/report_label_quantity_people" />

    <TextView
        android:id="@+id/report_work_time_tf_04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="@dimen/standartMargin"
        android:text="@string/report_example_count"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/report_label_work_time"
        app:layout_constraintStart_toStartOf="@+id/report_label_work_time"
        app:layout_constraintTop_toBottomOf="@+id/report_label_work_time" />
</androidx.constraintlayout.widget.ConstraintLayout>