<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="@dimen/standart_elevation">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/block_client_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standartMargin"
            android:layout_marginBottom="@dimen/standartMargin"
            android:text="@string/block_client_label"
            android:textAlignment="center"
            android:textSize="@dimen/largeText" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/category_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/category_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="false"
                android:hint="@string/choose_category" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/group_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standartMargin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/group_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="false"
                android:hint="@string/choose_group" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standartMargin">

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:id="@+id/name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:completionThreshold="2"
                android:hint="@string/choose_fio"
                android:paddingStart="@dimen/padding_gorizontal"
                android:paddingTop="@dimen/padding_vertical"
                android:paddingEnd="@dimen/padding_gorizontal"
                android:paddingBottom="@dimen/padding_vertical"
                android:cursorVisible="false"
                android:imeOptions="actionDone"
                android:inputType="textPersonName|textAutoCorrect" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>