<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="@dimen/standart_elevation">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/block_client_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standartMargin"
            android:layout_marginBottom="@dimen/standartMargin"
            android:text="@string/block_topic_label"
            android:textAlignment="center"
            android:textSize="@dimen/largeText" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/declared_request_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="255"
            app:counterTextAppearance="@style/TextAppearance.MaterialComponents.Body1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/declared_request_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/declared_request"
                android:inputType="textAutoCorrect"
               />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/real_request_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="255"
            app:counterTextAppearance="@style/TextAppearance.MaterialComponents.Body1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/real_request_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/real_request"
                android:inputType="textAutoCorrect"      />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/work_form_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/minMargin"
                android:layout_marginEnd="@dimen/standartMargin"
                app:layout_constraintBaseline_toBaselineOf="@+id/code_tf_layout"
                app:layout_constraintEnd_toStartOf="@+id/code_tf_layout"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/work_form_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/choose_work_form" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/code_tf_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/minMargin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/work_form_layout"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/code_tf_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusableInTouchMode="false"
                    android:hint="@string/choose_tf" />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>


</androidx.cardview.widget.CardView>